# Autodocumentsorganizer

./: .coverage  .coveragerc  .dockerignore  .env.example  .flake8  .gitignore  API.md  CMakeLists.txt  DEPENDENCIES.md  DOCKER_GUIDE.md  Dockerfile  HINWEISE.md  INSTALLATION_GUIDE_DE.md  INSTALL_ERRORS_FIXED.md  KATEGORISIERUNG.md  QUICKSTART.md  RASPBERRY_PI_SETUP.md  README.md  auto_integrate.py  backup.py  benchmark_native.py  config.yaml  conftest.py  docker-compose.yml  fix_docstrings.py  image_fast.cp312-win_amd64.pyd  inspect_raw_db.py  install.sh  main.py  migrate_passwords.py  migrate_to_sqlalchemy.py  monitor.py  ocr_accelerator.cp312-win_amd64.pyd  prometheus.yml  pytest.ini  quickstart.py  raspberry_pi_install.sh  requirements-dev.txt  requirements-minimal.txt  requirements.txt  (+9 more)
app/: __init__.py  api_response.py  audit.py  auth.py  auto_tagger.py  cache.py  categorizer.py  celery_app.py  data_extractor.py  database.py  db_config.py  db_operations.py  document_processor.py  email_receiver.py  exporters.py  health.py  image_preprocessor.py  logging_config.py  metrics.py  monitoring.py  ocr_ensemble.py  ollama_client.py  queue_manager.py  redis_client.py  scanner_handler.py  schemas.py  search_engine.py  security_config.py  semantic_search.py  server.py  statistics_engine.py  storage_manager.py  tasks.py  upload_handler.py
k8s/: deployment.yml  pvc.yml  redis.yml  service.yml
migrations/: 001_add_indexes.py
native/: db_fast.c  image_fast.c  ocr_accelerator.cpp  search_indexer.cpp
systemd/: document-manager.service
tests/: __init__.py  conftest.py  (+7 more)
(+41 files in other folders)
